--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Configurações do Flyway
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+spring.thymeleaf.enabled=true
