--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <flyway.version>10.21.0</flyway.version>
         <thymeleaf-layout.version>3.3.0</thymeleaf-layout.version>
         <spring-dotenv.version>4.0.0</spring-dotenv.version>
+        <springdoc.version>2.6.0</springdoc.version>
     </properties>
     <dependencies>
         <dependency>
@@ -70,6 +71,12 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${springdoc.version}</version>
         </dependency>
 
         <dependency>
