--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,12 @@ spring.jpa.show-sql=true
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
+# Thymeleaf
 spring.thymeleaf.enabled=true
+
+# OpenApi
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+springdoc.packagesToScan=br.dev.zancanela.quickcup_api.controller.api
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.operationsSorter=alpha
