feat: cria grupo e produto controller e cors global config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=QuickCup API
 
+application.cross-origin-url=${CROSS_ORIGIN_URL:http://localhost:8081}
+
 #Database with PostgreSQL
 spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${POSTGRES_USER}
