feat: add SecurityConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=QuickCup API
 
-application.cross-origin-url=${CROSS_ORIGIN_URL:http://localhost:8081}
+application.cross-origin-urls=${CROSS_ORIGIN_URLS:http://localhost:8081}
 
 #Database with PostgreSQL
 spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
@@ -25,3 +25,7 @@ springdoc.api-docs.path=/api-docs
 springdoc.packagesToScan=br.dev.zancanela.quickcup_api.controller.api
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.operationsSorter=alpha
+
+# Security
+security.api.key=${QUICKCUP_API_KEY}
+quickcup.users.default.password=${QUICKCUP_USERS_DEFAULT_PASSWORD}
