--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,4 +28,9 @@ springdoc.swagger-ui.operationsSorter=alpha
 
 # Security
 security.api.key=${QUICKCUP_API_KEY}
+
+
+#Configurações de ambiente
 quickcup.users.default.password=${QUICKCUP_USERS_DEFAULT_PASSWORD}
+quickcup.link.formulario.testes=${LINK_FORMULARIO_TESTES}
+quickcup.link.aplicacao.cliente=${LINK_APLICACAO_CLIENTE}
