feat: convert application properties to utf-8

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,11 @@ spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configurações do JPA
+# Configuracoes do JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
-# Configurações do Flyway
+# Configuracoes do Flyway
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
@@ -30,7 +30,7 @@ springdoc.swagger-ui.operationsSorter=alpha
 security.api.key=${QUICKCUP_API_KEY}
 
 
-#Configurações de ambiente
+#Configuracoes de ambiente
 quickcup.users.default.password=${QUICKCUP_USERS_DEFAULT_PASSWORD}
 quickcup.link.formulario.testes=${LINK_FORMULARIO_TESTES}
 quickcup.link.aplicacao.cliente=${LINK_APLICACAO_CLIENTE}
