--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,10 @@ spring.flyway.locations=classpath:db/migration
 
 # Thymeleaf
 spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
 
 # OpenApi
 springdoc.swagger-ui.path=/swagger-ui.html
