feat: update address server to ipv6

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=QuickCup API
 
 application.cross-origin-urls=${CROSS_ORIGIN_URLS:http://localhost:8081}
 
+server.address=::
+server.port=8080
+
 #Database with PostgreSQL
 spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${POSTGRES_USER}
