feat: add controller admin tests

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -22,9 +22,9 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 
 # Security
-security.api.key=${QUICKCUP_API_KEY}
+security.api.key=apiKeyTest
 
 #Configuracoes de ambiente
-quickcup.users.default.password=test
-quickcup.link.formulario.testes=test
-quickcup.link.aplicacao.cliente=test
+quickcup.users.default.password=passwordTest
+quickcup.link.formulario.testes=https://test.form
+quickcup.link.aplicacao.cliente=https://client.app
